fix: dark mode

--- a/client/assets/css/main.css
+++ b/client/assets/css/main.css
@@ -2,15 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --color: #243746;
+    --color-primary: #158876;
+    --color-secondary: #0e2233;
+    --bg: #f3f5f4;
+    --bg-secondary: #fff;
+    --border-color: #ddd;
+}
+
+.dark-mode {
+    --color: #ebf4f1;
+    --color-primary: #41b38a;
+    --color-secondary: #fdf9f3;
+    --bg: #091a28;
+    --bg-secondary: #071521;
+    --border-color: #0d2538;
+}
+.sepia-mode {
+    --color: #433422;
+    --color-secondary: #504231;
+    --bg: #f1e7d0;
+    --bg-secondary: #eae0c9;
+    --border-color: #ded0bf;
+}
+
 body {
-    background-color: #fff;
-    color: rgba(0,0,0,0.8);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: var(--bg);
+    color: var(--color);
+    transition: background-color .3s;
 }
-.dark-mode body {
-    background-color: #091a28;
-    color: #ebf4f1;
+a {
+    color: var(--color-primary);
 }
-.sepia-mode body {
-    background-color: #f1e7d0;
-    color: #433422;
-}
+
